# zetasql-wasm

./: .gitignore  .golangci.yml  LICENSE  Makefile  README.md  analyze.go  analyzer.go  analyzer_options.go  analyzer_options_test.go  analyzer_payload_test.go  analyzer_resolved_ast_test.go  analyzer_test.go  cast.go  cast_check.go  cast_test.go  engine.go  engine_test.go  go.mod  go.sum  language_features.go  language_options.go  language_options_test.go  node_map.go  node_map_test.go  parse_resume_location.go  parse_resume_location_test.go  parser.go  parser_test.go  renovate.json  statement_kinds.go  version.go  wasm_module_test.go  wasm_runtime.go
.claude/skills/bazel-build-expert/: SKILL.md
.claude/skills/developer/: SKILL.md
.claude/skills/tdd/: SKILL.md
.claude/skills/tester/: SKILL.md
.claude/skills/tester/references/: anti-patterns.md  fixture-management.md  modes.md  rules.md  xunit-patterns.md
.claude/skills/wasm-debugger/: SKILL.md
.github/workflows/: bump.yml  ci.yml  release.yml
ast/: debug.go  format.go  format_test.go  inherited_fields_test.go  kind_gen.go  node.go  nodes_gen.go  parse_location_range.go  parse_location_range_test.go  rewrite_named_timezone.go  rewrite_named_timezone_test.go  walk.go  wrap_gen.go
catalog/: catalog.go  catalog_test.go  column.go  column_test.go  table.go  table_test.go
cmd/inspect/: main.go
docs/en/: README.md  architecture.md  patches.md  wasm-sdk-test-plan.md
docs/ja/: README.md  architecture.md  development-plan.md  patches.md  wasm-sdk-test-plan.md
resolved_ast/: column.go  column_test.go  enums.go  format.go  format_test.go  function_ref.go  function_ref_test.go  kind_gen.go  node.go  node_test.go  nodes_gen.go  walk.go  walk_test.go  window_frame_expr.go  window_frame_expr_test.go  wrap_gen.go
types/: array_type.go  array_type_test.go  cast_error.go  cast_error_test.go  enum_type.go  enum_type_test.go  function.go  function_test.go  literal_value.go  literal_value_test.go  proto.go  proto_test.go  simple_catalog.go  simple_catalog_test.go  simple_column.go  simple_column_test.go  simple_table.go  simple_table_test.go  struct_type.go  struct_type_test.go  type.go  type_kind.go  type_kind_test.go  type_test.go  wrap_type.go  wrap_type_test.go
wasm/: .gitignore  Dockerfile  Makefile  error_protocol.go  error_protocol_test.go  go.mod  go.sum  wasm.go
wasm/assets/: .bazelrc  BUILD.bazel  MODULE.bazel  bridge.cc  docker-build.sh
wasm/assets/patches/: bazel_icu.patch  zetasql_analyzer_options_timezone.patch  zetasql_local_service_visibility.patch  zetasql_parser_visibility.patch  zetasql_proto_visibility.patch  zetasql_public_functions_date_time_util.patch  zetasql_public_functions_regexp.patch  zetasql_public_functions_string.patch  zetasql_public_strings.patch  zetasql_resolved_ast_visibility.patch
wasm/schemas/zetasql/compliance/: test_driver.proto
wasm/schemas/zetasql/parser/: parse_tree.proto
wasm/schemas/zetasql/public/: builtin_function.proto  options.proto
wasm/schemas/zetasql/public/information_schema/: property_graph.proto
wasm/script/: build.sh  check-deps.sh  clean.sh  test-tools.sh
wasm/tools/: README.md  go.mod
wasm/tools/astgen/: main.go
wasm/tools/astgen/templates/: kind.go.tmpl  nodes.go.tmpl  wrap.go.tmpl
wasm/tools/example/: README.md
wasm/tools/example/input/api/: BUILD
wasm/tools/example/input/test/: README.txt  data.json  sample.proto
wasm/tools/example/schemas/api/v1/: user.proto
wasm/tools/extract-protos/: main.go
wasm/tools/protogen/: main.go
wasm/tools/resolved_astgen/: main.go
wasm/tools/resolved_astgen/templates/: kind.go.tmpl  nodes.go.tmpl  wrap.go.tmpl
