# ZetaSQL WASM Build Module
# Dependabot automatically updates versions

module(
    name = "zetasql-wasm",
    version = "0.0.1",
)

# Basic dependencies (fetched from BCR)
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "rules_cc", version = "0.2.8")

# Emscripten toolchain (for WASM generation)
# Using the latest version registered in BCR
bazel_dep(name = "emsdk", version = "4.0.17")

# Prebuilt protoc toolchain (must be BEFORE protobuf to win toolchain registration)
# toolchains_protoc provides prebuilt protoc binaries for protobuf < 33.4
bazel_dep(name = "toolchains_protoc", version = "0.6.1")

# Protobuf (explicitly declared for dependency management)
bazel_dep(name = "protobuf", version = "29.1")

# ZetaSQL dependency (automatically updated by Renovate Bot)
# Since ZetaSQL is not registered in BCR, it is managed using a combination of bazel_dep and git_override
# Note: bazel_dep has no actual implementation, but serves as a marker for Renovate Bot to track versions
bazel_dep(name = "zetasql", version = "2025.12.1")

# Specify the actual source for ZetaSQL
# Apply patches to ICU BUILD file for WASM cross-compilation support
git_override(
    module_name = "zetasql",
    remote = "https://github.com/google/zetasql.git",
    tag = "2025.12.1",
    patches = [
        "//:patches/bazel_icu.patch",
        "//:patches/zetasql_public_functions_date_time_util.patch",
        "//:patches/zetasql_public_functions_regexp.patch",
        "//:patches/zetasql_public_functions_string.patch",
        "//:patches/zetasql_public_strings.patch",
    ],
    patch_strip = 1,
)

# Pin abseil-cpp to the version required by ZetaSQL
# When using git_override, the child module's (ZetaSQL) single_version_override is
# ignored, so it must be explicitly specified in the root module
single_version_override(
    module_name = "abseil-cpp",
    version = "20240722.1",
)

# Override the toolchain registration from the protobuf module
# This ensures toolchains_protoc wins the toolchain registration
protoc = use_extension("@toolchains_protoc//protoc:extensions.bzl", "protoc")
protoc.toolchain(
    version = "v29.1",  # Match protobuf runtime version
)
use_repo(protoc, "toolchains_protoc_hub")
register_toolchains("@toolchains_protoc_hub//:all")

